--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -14,7 +14,7 @@
     "import cv2\n",
     "import uuid\n",
     "import os\n",
-    "import time\n"
+    "import time"
    ]
   },
   {
@@ -25,35 +25,6 @@
     "IMAGES_PATH = os.path.join('data', 'images')\n",
     "labels = ['in_frame', 'partial_frame']\n",
     "number_imgs = 172"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'labelImg'...\r\n",
-      "remote: Enumerating objects: 1975, done.\u001B[K\r\n",
-      "remote: Counting objects: 100% (214/214), done.\u001B[K\r\n",
-      "remote: Compressing objects: 100% (145/145), done.\u001B[K\r\n",
-      "remote: Total 1975 (delta 115), reused 132 (delta 61), pack-reused 1761\u001B[Kjects:  72% (1433/1975), 130.40 MiB | 1.56 MiB/sReceiving objects:  72% (1433/1975), 131.43 MiB | 1.26 MiB/sReceiving objects:  72% (1433/1975), 133.31 MiB | 723.00 KiB/sReceiving objects:  72% (1433/1975), 135.25 MiB | 873.00 KiB/sReceiving objects:  72% (1433/1975), 137.55 MiB | 1.12 MiB/sReceiving objects:  72% (1433/1975), 142.72 MiB | 1.64 MiB/sReceiving objects:  72% (1433/1975), 144.39 MiB | 1.54 MiB/sReceiving objects:  72% (1433/1975), 145.19 MiB | 1.34 MiB/sReceiving objects:  72% (1438/1975), 148.04 MiB | 966.00 KiB/sReceiving objects:  72% (1438/1975), 150.48 MiB | 1.12 MiB/s  Receiving objects:  72% (1438/1975), 151.52 MiB | 1.02 MiB/sReceiving objects:  72% (1438/1975), 155.06 MiB | 1.15 MiB/sReceiving objects:  72% (1438/1975), 157.42 MiB | 1.29 MiB/sReceiving objects:  72% (1439/1975), 159.64 MiB | 1.10 MiB/sReceiving objects:  72% (1440/1975), 161.72 MiB | 1.15 MiB/sReceiving objects:  72% (1441/1975), 164.50 MiB | 1.22 MiB/sReceiving objects:  72% (1441/1975), 168.09 MiB | 1.46 MiB/sReceiving objects:  73% (1442/1975), 171.37 MiB | 1.49 MiB/sReceiving objects:  73% (1442/1975), 173.46 MiB | 1.87 MiB/sReceiving objects:  73% (1442/1975), 176.30 MiB | 1.41 MiB/sReceiving objects:  73% (1442/1975), 178.83 MiB | 1.23 MiB/sReceiving objects:  73% (1442/1975), 181.28 MiB | 1.25 MiB/sReceiving objects:  73% (1444/1975), 189.54 MiB | 2.47 MiB/sReceiving objects:  74% (1462/1975), 191.41 MiB | 2.73 MiB/sReceiving objects:  74% (1467/1975), 195.16 MiB | 2.85 MiB/sReceiving objects:  74% (1467/1975), 199.02 MiB | 1.87 MiB/sReceiving objects:  74% (1467/1975), 203.11 MiB | 1.88 MiB/sReceiving objects:  74% (1467/1975), 203.49 MiB | 1.36 MiB/sReceiving objects:  74% (1467/1975), 209.27 MiB | 1.54 MiB/sReceiving objects:  74% (1467/1975), 212.97 MiB | 1.92 MiB/sReceiving objects:  74% (1467/1975), 217.15 MiB | 2.35 MiB/sReceiving objects:  74% (1467/1975), 221.14 MiB | 1.91 MiB/sReceiving objects:  74% (1467/1975), 224.30 MiB | 1.78 MiB/sReceiving objects:  74% (1468/1975), 227.46 MiB | 1.83 MiB/sReceiving objects:  76% (1501/1975), 227.46 MiB | 1.83 MiB/sReceiving objects:  80% (1580/1975), 227.46 MiB | 1.83 MiB/sReceiving objects:  85% (1679/1975), 230.77 MiB | 2.25 MiB/sReceiving objects:  87% (1723/1975), 232.74 MiB | 2.28 MiB/s\r\n",
-      "Receiving objects: 100% (1975/1975), 232.85 MiB | 1.72 MiB/s, done.\r\n",
-      "Resolving deltas: 100% (1162/1162), done.\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "!git clone https://github.com/tzutalin/labelImg"
    ],
    "metadata": {
     "collapsed": false,
@@ -167,7 +138,8 @@
     }
    ],
    "source": [
-    "model = torch.hub.load('ultralytics/yolov5', 'yolov5s')"
+    "# not required\n",
+    "# model = torch.hub.load('ultralytics/yolov5', 'yolov5s')"
    ],
    "metadata": {
     "collapsed": false,
@@ -250,7 +222,6 @@
     }
    ],
    "source": [
-    "\n",
     "!python3 yolov5/train.py --img 320 --batch 16 --epochs 500 --data yolov5/dataset.yml --weights yolov5/yolov5s.pt --workers 2"
    ],
    "metadata": {
@@ -324,30 +295,6 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
